--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@
   border: none;
   box-shadow: none;
   font-family: "Avenir Next Condensed";
-  background-attachment: scroll;
   padding-top: 20px;
   padding-bottom: 20px;
   line-height: 27px;
@@ -25,4 +24,31 @@
   margin-left: 40px;
   margin-rght: 40px;
   padding: 7.5px 10px 7.5px 10px;
+}
+
+#ly-bg {
+  height: 600px;
+  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 40;
+  bottom: 0;
+  z-index: -1;
+  filter: brightness(75%);
+}
+
+#artist-shop {
+  color: white;
+  font-family: "Avenir Next Condensed";
+  text-align: center;
+  padding-top: 225px;
+  padding-bottom: 100px;
+}
+
+#artist-series {
+  font-size: 65px;
+  font-weight: bold;
+  font-height: 65px;
+  padding-bottom: 30px;
 }
